# bakery-quotation-agent

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Agentic Quotation Mini‑assessment (bakery).md  Dockerfile  README.md  deploy-bakery-to-gcp.sh  docker-compose.yml  justfile  pyproject.toml  pytest.ini  requirements.txt  setup-hooks.sh  verify_setup.py
.git-hooks/: pre-commit
.github/workflows/: ci.yml  docker.yml  test.yml
frontend/: .gcloudignore  .gitignore  Dockerfile  README.md  next.config.ts  package.json
frontend/src/app/: globals.css  page.tsx  page.tsx.backup
frontend/src/app/api/chat/: route.ts
frontend/src/app/help/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/: PaymentInterface.tsx
frontend/src/components/ui/: chatgpt-prompt-input.tsx  demo.tsx  document-upload.tsx  dropdown-menu.tsx  payment-component.tsx  sidebar-demo.tsx  sidebar.tsx
frontend/src/lib/: bakery-api.ts
src/: __init__.py  calculator.py  calculator.py.bak  config.py  converter.py  converter.py.bak  main.py  models.py
src/agent/: __init__.py  orchestrator.py  prompts.py
src/app/: config.py  main.py
src/app/api/: health.py
src/app/api/routes/: chat.py  quotations.py  quotes.py
src/app/data_models/: __init__.py  common.py
src/app/services/: quotation.py
src/tools/: __init__.py  bom_tool.py  database_tool.py  db_cli.py  template_tool.py
tests/: conftest.py
tests/e2e/: test_full_quote_generation.py
tests/fixtures/: sample_data.py
tests/integration/: test_tool_integration.py
tests/unit/: test_agent_orchestrator.py  test_bom_tool.py  test_calculator.py  test_converter.py  test_database_tool.py  test_template_tool.py
